fix: overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,7 @@
 
 html {
   overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -33,6 +34,8 @@ body {
   overflow-y: auto;
   color: var(--foreground);
   font-family: 'Swis721 LtEx BT', 'Swiss 721 Light Extended', Arial, Helvetica, sans-serif;
+  width: 100%;
+  max-width: 100vw;
 }
 
 /* Custom Animations */
