--- a/app/styles.css
+++ b/app/styles.css
@@ -3,7 +3,9 @@
 }
 main{
     background: #e2e2e2;
-
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 body{
   background: #e2e2e2;
